corpus/c/syntax/case-05/snapshots/gcc15/render.default.txt
error: syntax error
--> src/main.c:2:19
help: fix the first parser error at the user-owned location
why: expected ';' before '}}' token
| src/main.c:2:19
|     return (1 + 2;
|                   ^
suggested edit: insert ';' at src/main.c:2:19
  patch: src/main.c
  2 -     return (1 + 2;
  2 +     return (1 + 2;;
other errors:
  - src/main.c:2:18: error: syntax error
  - src/main.c:2:18: error: syntax error
  - src/main.c:2:19: error: syntax error
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output